<resources>
    <string name="app_name">FindMyPG</string>
    <string name="Password">Password</string>
    <string name="login">Login</string>
    <string name="SignUpWithAccount">Don\'t have account? Sign Up</string>
    <string name="SignInGoogle">Sign in with Google</string>
    <string name="Email">Email</string>
    <string name="SignUp">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="SignInWithAccount">Already have account? Sign In</string>
    <string name="SignUpWithGoogle">Sign Up with Google</string>
    <string name="web_client_id">442036339298-9n0evmihshlhv61364op36bgvdobd5i3.apps.googleusercontent.com</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="setting">Setting</string>
    <string name="search">search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome,</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="add_room_details">Add Room Details</string>
    <string name="icon_for_room_name">icon for room name</string>
    <string name="room_name">Room Name</string>
    <string name="room_number">Room Number</string>
    <string name="land_mark">Landmark</string>
    <string name="icon_for_txtFiled">icon for TxtFiled</string>
    <string name="street_no_name">Street No/Name</string>
    <string name="shareable_by_how_many">Shareable By How Many</string>
    <string name="rent_amount">Rent Amount</string>
    <string name="deposit_amount">Deposit Amount</string>
    <string name="amenities">Amenities</string>
    <string name="ac">AC</string>
    <string name="washing_machine">Washing Machine</string>
    <string name="wi_fi">Wi-Fi</string>
    <string name="fans">Fans</string>
    <string name="geyser">Geyser</string>
    <string name="furnished">Furnished</string>
    <string name="add">Add</string>
    <string name="suitable_for">Suitable For</string>
    <string name="students">Students</string>
    <string name="professionals">Professionals</string>
    <string name="couples">Couples</string>
    <string name="solo">Solo</string>
    <string name="about">About</string>
    <string name="click_to_add_image">Click to add image</string>
    <string name="post_room">Post Room</string>
    <string name="history">History</string>
    <string name="not_set">not set</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="back_online">Back Online</string>
    <string name="searchbar_hint">Search</string>
    <string name="add_room">Add Room</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <string name="system_theme">System Default</string>
    <string name="address">Address</string>
    <string name="welcome_user">Welcome,</string>
    <string name="toolbarimageview">ToolBarImageView</string>
    <string name="room_area_in_sq_ft">Room Area in Sq. Ft.</string>
    <string name="ImageButton">ImageButton</string>
    <string name="Details">Details</string>
    <string name="Price">Price</string>
    <string name="Deposit">Deposit</string>
    <string name="shareable_by">Shareable By</string>
    <string-array name="room_type">
        <item>Single Room</item>
        <item>Double Room</item>
        <item>Dorm Room</item>
        <item>Apartment</item>
        <item>Studio Apartment</item>
        <item>Independent House</item>
    </string-array>
    <string name="area">Area</string>
    <string name="about_room">About Room</string>
    <string name="book_room">Book Room</string>
    <string name="full_name">Full Name</string>
    <string name="rent">Rent</string>
    <string name="remove_room">Remove Room</string>
    <string name="change">Change</string>
    <string name="email_gmail_com">email@gmail.com</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="phone_number">Phone Number</string>
    <string name="street_name_no">Street Name/No</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="min_rent">Min Rent</string>
    <string name="max_rent">Max Rent</string>
    <string name="clear_all_filters">Clear All Filters</string>
    <string name="my_profile">My Profile</string>
    <string name="theme">Theme</string>
    <string name="sign_out">Sign Out</string>
    <string name="location">Location</string>
    <string name="booked_date">Booked Date</string>
    <string name="shared_by">Shared By</string>
    <string name="rent_status">Rent Status</string>
    <string name="paid">Paid</string>
    <string name="next_rent_date">Next Rent Date</string>
    <string name="deposit_status">Deposit Status</string>
    <string name="collected">Collected</string>
    <string name="rent_">Rent:</string>
    <string name="deposit_">Deposit:</string>
    <string name="update">Update</string>
    <string name="working">Working</string>
    <string name="street_number">Street Number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="imageview">ImageView</string>
    <string name="contact_details">Contact Details</string>
    <string name="booking_status">Booking Status</string>
    <string name="no_bookings">No Bookings Found</string>
    <string name="booking_for">Booking For</string>
    <string-array name="room_suitableFor">
        <item>Student</item>
        <item>Professionals</item>
        <item>Couples</item>
        <item>Short-term stays</item>
        <item>Solo</item>
    </string-array>
    <string-array name="indian_states">
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Ladakh</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Puducherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttarakhand</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
    <string-array name="andhra_pradesh_cities">
        <item>Select Your District</item>
        <item>Anantapur</item>
        <item>Chittoor</item>
        <item>East Godavari</item>
        <item>Guntur</item>
        <item>Kadapa</item>
        <item>Krishna</item>
        <item>Kurnool</item>
        <item>Nellore</item>
        <item>Prakasam</item>
        <item>Srikakulam</item>
        <item>Visakhapatnam</item>
        <item>Vizianagaram</item>
        <item>West Godavari</item>
    </string-array>
    <string-array name="arunachal_pradesh_cities">
        <item>Select Your District</item>
        <item>Anjaw</item>
        <item>Siang</item>
        <item>Changlang</item>
        <item>Dibang Valley</item>
        <item>East Kameng</item>
        <item>East Siang</item>
        <item>Kamle</item>
        <item>Kra Daadi</item>
        <item>Kurung Kumey</item>
        <item>Lepa Rada</item>
        <item>Lohit</item>
        <item>Longding</item>
        <item>Lower Dibang Valley</item>
        <item>Lower Siang</item>
        <item>Lower Subansiri</item>
        <item>Namsai</item>
        <item>Pakke Kessang</item>
        <item>Papum Pare</item>
        <item>Shi Yomi</item>
        <item>Tawang</item>
        <item>Tirap</item>
        <item>Upper Siang</item>
        <item>Upper Subansiri</item>
        <item>West Kameng</item>
        <item>West Siang</item>
    </string-array>
    <string-array name="assam_cities">
        <item>Select Your District</item>
        <item>Bajali</item>
        <item>Baksa</item>
        <item>Barpeta</item>
        <item>Biswanath</item>
        <item>Bongaigaon</item>
        <item>Cachar</item>
        <item>Charaideo</item>
        <item>Chirang</item>
        <item>Darrang</item>
        <item>Dhemaji</item>
        <item>Dhubri</item>
        <item>Dibrugarh</item>
        <item>Dima Hasao</item>
        <item>Goalpara</item>
        <item>Golaghat</item>
        <item>Hailakandi</item>
        <item>Hojai</item>
        <item>Jorhat</item>
        <item>Kamrup</item>
        <item>Kamrup Metropolitan</item>
        <item>Karbi Anglong</item>
        <item>Karimganj</item>
        <item>Kokrajhar</item>
        <item>Lakhimpur</item>
        <item>Majuli</item>
        <item>Morigaon</item>
        <item>Nagaon</item>
        <item>Nalbari</item>
        <item>Sivasagar</item>
        <item>Sonitpur</item>
        <item>South Salmara-Mankachar</item>
        <item>Tinsukia</item>
        <item>Udalguri</item>
        <item>West Karbi Anglong</item>
    </string-array>
    <string-array name="bihar_cities">
        <item>Select Your District</item>
        <item>Araria</item>
        <item>Arwal</item>
        <item>Aurangabad</item>
        <item>Banka</item>
        <item>Begusarai</item>
        <item>Bhagalpur</item>
        <item>Bhojpur</item>
        <item>Buxar</item>
        <item>Darbhanga</item>
        <item>East Champaran</item>
        <item>Gaya</item>
        <item>Gopalganj</item>
        <item>Jamui</item>
        <item>Jehanabad</item>
        <item>Kaimur</item>
        <item>Katihar</item>
        <item>Khagaria</item>
        <item>Kishanganj</item>
        <item>Lakhisarai</item>
        <item>Madhepura</item>
        <item>Madhubani</item>
        <item>Munger</item>
        <item>Muzaffarpur</item>
        <item>Nalanda</item>
        <item>Nawada</item>
        <item>Patna</item>
        <item>Purnia</item>
        <item>Rohtas</item>
        <item>Saharsa</item>
        <item>Samastipur</item>
        <item>Saran</item>
        <item>Sheikhpura</item>
        <item>Sheohar</item>
        <item>Sitamarhi</item>
        <item>Siwan</item>
        <item>Supaul</item>
        <item>Vaishali</item>
        <item>West Champaran</item>
    </string-array>
    <string-array name="chhattisgarh_cities">
        <item>Select Your District</item>
        <item>Balod</item>
        <item>Baloda Bazar</item>
        <item>Balrampur Ramanujganj</item>
        <item>Bastar</item>
        <item>Bemetara</item>
        <item>Bijapur</item>
        <item>Bilaspur</item>
        <item>Dantewada</item>
        <item>Dhamtari</item>
        <item>Durg</item>
        <item>Gariaband</item>
        <item>Gaurela Pendra Marwahi</item>
        <item>Janjgir Champa</item>
        <item>Jashpur</item>
        <item>Kabirdham</item>
        <item>Kanker</item>
        <item>Kondagaon</item>
        <item>Korba</item>
        <item>Koriya</item>
        <item>Mahasamund</item>
        <item>Mungeli</item>
        <item>Narayanpur</item>
        <item>Raigarh</item>
        <item>Raipur</item>
        <item>Rajnandgaon</item>
        <item>Sukma</item>
        <item>Surajpur</item>
        <item>Surguja</item>
    </string-array>
    <string-array name="goa_cities">
        <item>Select Your District</item>
        <item>North Goa</item>
        <item>South Goa</item>
    </string-array>
</resources>