<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@color/RoomRawBackgroundColor"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/room_image"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop"
            app:backgroundTint="@color/material_on_surface_emphasis_medium"
            app:backgroundTintMode="add" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/room_name_tv"
                style="?attr/textAppearanceHeadline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/room_name"
                android:textColor="@color/textColor" />

            <TextView
                android:id="@+id/room_location_tv"
                style="?attr/textAppearanceSubtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:drawableLeft="@drawable/ic_location"
                android:drawablePadding="4dp"
                android:singleLine="true"
                android:text="@string/location"
                android:textColor="@color/secondaryTextColor" />

            <TextView
                android:id="@+id/room_about_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:maxLines="2"
                android:text="@string/about_room"
                android:textColor="@color/secondaryTextColor" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:background="?attr/dividerHorizontal" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/rent_"
                android:textColor="@color/textColor"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/rent_amount_tv"
                style="?attr/textAppearanceSubtitle1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/rent_"
                android:textColor="?attr/colorPrimary"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:gravity="center"
                android:text="@string/deposit_"
                android:textColor="@color/textColor"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/deposit_amount_tv"
                style="?attr/textAppearanceSubtitle1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/deposit_"
                android:textColor="?attr/colorPrimary"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:contentDescription="@string/ImageButton"
                android:src="@drawable/ic_star" />

            <TextView
                android:id="@+id/ratings_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="4.5"
                android:textAlignment="viewEnd" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/controlLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hideViewBtn">

            <ImageButton
                android:id="@+id/history_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:background="@android:color/transparent"
                android:padding="10dp"
                android:src="@drawable/ic_history"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/ImageButton"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/history_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history"
                app:layout_constraintEnd_toEndOf="@+id/history_btn"
                app:layout_constraintStart_toStartOf="@+id/history_btn"
                app:layout_constraintTop_toBottomOf="@+id/history_btn" />

            <ImageButton
                android:id="@+id/details_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="10dp"
                android:src="@drawable/ic_home"
                app:layout_constraintBottom_toBottomOf="@id/history_btn"
                app:layout_constraintEnd_toStartOf="@id/update_btn"
                app:layout_constraintStart_toEndOf="@id/history_btn"
                android:contentDescription="@string/ImageButton"
                app:layout_constraintTop_toTopOf="@id/history_btn" />

            <TextView
                android:id="@+id/details_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Details"
                app:layout_constraintEnd_toEndOf="@+id/details_btn"
                app:layout_constraintStart_toStartOf="@id/details_btn"
                app:layout_constraintTop_toBottomOf="@+id/details_btn" />

            <ImageButton
                android:id="@+id/update_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:background="@android:color/transparent"
                android:padding="10dp"
                android:src="@drawable/ic_edit"
                app:layout_constraintBottom_toBottomOf="@id/details_btn"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/ImageButton"
                app:layout_constraintTop_toTopOf="@id/details_btn" />

            <TextView
                android:id="@+id/update_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update"
                app:layout_constraintEnd_toEndOf="@+id/update_btn"
                app:layout_constraintStart_toStartOf="@id/update_btn"
                app:layout_constraintTop_toBottomOf="@+id/update_btn" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
